removed some old messages

--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.14 2002/07/12 06:47:15 robbod Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.15 2002/07/24 00:16:55 thendrix Exp $</p>
 <b>Contents</b><br>
 
 
@@ -210,8 +210,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/12 06:47:15 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.14 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/24 00:16:55 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.15 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -622,7 +622,7 @@ document_usage_role.name)
 
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.14 2002/07/12 06:47:15 robbod Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.15 2002/07/24 00:16:55 thendrix Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -630,7 +630,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.14 2002/07/12 06:47:15 robbod Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.15 2002/07/24 00:16:55 thendrix Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -639,7 +639,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.14 2002/07/12 06:47:15 robbod Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.15 2002/07/24 00:16:55 thendrix Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -983,8 +983,8 @@ schema. These USE FROM statements may contain a list of imported constructs.</p>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/12 06:47:15 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.14 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/24 00:16:55 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.15 $&quot;&gt;
   </div>
   &nbsp;
 <p>
@@ -1258,18 +1258,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.14 2002/07/12 06:47:15 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.15 2002/07/24 00:16:55 thendrix Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.14 2002/07/12 06:47:15 robbod Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.15 2002/07/24 00:16:55 thendrix Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-<<<<<<< additional_module_guidelines.htm
-&nbsp; rcs.date=&quot;$Date: 2002/06/27 07:50:52 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.13 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/07/24 00:16:55 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.15 $&quot;&gt;</span></font></p>
 
 <h2><a name="20020422182450_17">Module renaming</a></h2>
 <span class="746125613-27032002"><font face="Arial" size="2">To
@@ -1301,14 +1300,6 @@ Tell everyone what the new module name is, so that they can change all reference
 from the old module to new module</font></span>
 </span>
 <p>-</p>
-</table>
-=======
-&nbsp; rcs.date=&quot;$Date: 2002/07/12 06:47:15 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.14 $&quot;&gt;
-<p><font size="2" face="Arial"><span class="573095806-30052002">=======<br>
-</span></font></p>
-<p>&nbsp;</p>
->>>>>>> 1.14
 </table>
 
 </body>
