--- a/help/GE_guidelines.htm
+++ b/help/GE_guidelines.htm
@@ -25,7 +25,7 @@ below).</p>
 to the schema page and click on main schema, then add them to the description
 field.</p>
 <p>Example:&nbsp;</p>
-<p>&nbsp; $Id: GE_guidelines.htm,v 1.2 2002/07/11 20:04:06 thendrix Exp $<br>
+<p>&nbsp; $Id: GE_guidelines.htm,v 1.3 2002/07/11 21:10:31 thendrix Exp $<br>
 &nbsp; N773 - ISO TS - 10303-1042 Work request - EXPRESS MIM</p>
 <blockquote>
   <p>NOTE : in above, any text after the colon and before the second dollar sign
@@ -42,7 +42,7 @@ field.</p>
 
 <h3>.exp files:&nbsp;</h3>
 
-<p>Remove language identifier if any.</p>
+<p>Remove language version identifier if any.</p>
 
 <p>Remove Eurostep comments.</p>
 
