Added beartraps from Rob

--- a/help/GE_guidelines.htm
+++ b/help/GE_guidelines.htm
@@ -14,31 +14,42 @@
 
 <h2>While in GE</h2>
 
+<p><a href="#While">While in GE</a></p>
+
+<p><a href="#Exporting">Exporting from GE</a></p>
+
+<p><a href="#Cleanup">Cleaning&nbsp; up files after ge2module</a>s.</p>
+
+<p><a href="#using">Using GE 1.3.9 - stability issues.</a></p>
+
+<h2>&nbsp;</h2>
+
+<h2><a name="While"></a>While in GE</h2>
+
 <h3>&nbsp;Eurostep logo&nbsp;</h3>
 
 To eliminate the logo and&nbsp; incorrect title, cover with a rectangle in VISIO.
 <p>or, alternatively &nbsp;after exporting as XML, crop the *.gif images (see
 below).</p>
-<h3>&nbsp;</h3>
 <h3>Required comments</h3>
 <p>The best way to get to get static comments into arm.exp or mim.exp , is to go
 to the schema page and click on main schema, then add them to the description
 field.</p>
 <p>Example:&nbsp;</p>
-<p>&nbsp; $Id: GE_guidelines.htm,v 1.3 2002/07/11 21:10:31 thendrix Exp $<br>
+<p>&nbsp; $Id: GE_guidelines.htm,v 1.4 2002/07/24 00:22:06 thendrix Exp $<br>
 &nbsp; N773 - ISO TS - 10303-1042 Work request - EXPRESS MIM</p>
 <blockquote>
   <p>NOTE : in above, any text after the colon and before the second dollar sign
   was added by CVS - I did not put it in... This is how it is supposed to work.</p>
 </blockquote>
 <p>Remark&nbsp; delimiters will be added to Express by GE export process.</p>
-<h2>Exporting from GE</h2>
+<h2><a name="Exporting">Exporting</a> from GE</h2>
 
 <p>Export EXPRESS and Publish as XML.</p>
 
 <p>Now run ge2module.wsf</p>
 
-<h2>Cleanup of files after running ge2module.wsf.</h2>
+<h2><a name="Cleanup">Cleanup</a> of files after running ge2module.wsf.</h2>
 
 <h3>.exp files:&nbsp;</h3>
 
@@ -77,6 +88,34 @@ in clause 5.&nbsp; </p>
   <p>EXAMPLE&nbsp; For Shape_property_assignment_mim: href=&quot;../shape_property_assignment/sys/5_mim.xml#mim_express&quot;</p>
 
 </blockquote>
+
+<h2><a name="using"></a>Using GE 1.3.9 - tips to work around stability problems</h2>
+<p>(From Rob)</p>
+<p>Hi<br>
+I have had several emails about GraphicalExpress being unstable.<br>
+<br>
+The software is not 100% reliable.<br>
+<br>
+Having used it for a while I now know where some of the bear traps are.</p>
+<p>I don't think that the express import works that well - particularly on files with multiple schema.</p>
+<p>Avoid the temptation to copy between different Visio diagrams - this can lead to the model being corrupted. Particularly if you copy USE FROM or PAGE REFERENCEs&nbsp;</p>
+<p>Visio will nearly always crash if you publish as XML, then save as express. It successfully outputs the express then crashes.&nbsp;</p>
+<p>Editing the USE relationships between schema on the schema page can cause problems if you have selected the "Explicitly interface items"&nbsp;</p>
+<p>If you resize the pages to make the model fit the smallest page, the image maps will be correct on Windows2000 - I am not sure what happens in other operating systems. NT for example will produce an offset image map. If you are using NT I would recommend leaving the page size as default and position the diagram at the top of the page so that it is visible in the module.</p>
+<p>I always save my files a new version frequently so that I can go back to a previous version if the model gets corrupt. i.e. part_arm_v1.vsd&nbsp;<br>
+part_arm_v2.vsd&nbsp;<br>
+part_arm_v3.vsd  ....... etc&nbsp;</p>
+<p>I never use the description facility in GraphicalExpress to describe the model. I always run publish my model as XML then run stepmod/utils/extractDescriptions.wsf to get a template for the descriptions in a module i.e. arm_descriptions.xml mim_descriptions.xml, then write them there.&nbsp;
+The reason for doing this is that if I corrupt the model, it means that I still have the descriptions. Also, people other than me can update the descriptions.</p>
+<p>Finally, there scripts for extracting the XML for modules and the help files that explain how to do this are at:
+<a href="http://homepages.nildram.co.uk/~robbod/">http://homepages.nildram.co.uk/~robbod/</a></p>
+<p>One other area where GE is sometimes unstable is the renaming of schemas. I have found that this sometime crashes
+GE.&nbsp; My approach is to try to get me schema names correct first time ;-) If I do have to rename the schemas I rename them one at a time, saving into a new file each time so that I can roll back if something goes wrong.</p>
+<p>(From SYL)&nbsp;</p>
+<p>Along this line, if one needs to correct the names of USE_FROM schemas, one should first undo all the Entities referencing the schemas and then do the corrections. Think of Visio as a historical machine like old CAD systems, one needs to undo the last of a trail before correcting the earlier ones.
+</p>
+<p>(From Tom) On the bright side, although the crashes are annoying I have
+rarely lost work after a crash.</p>
 
 </body>
 
