--- a/help/additional_module_guidelines.htm
+++ b/help/additional_module_guidelines.htm
@@ -11,7 +11,7 @@
 <body>
 
 <h1 align="center"><a name="20020422182450_1">Additional module guidelines</a></h1>
-<p>Version $Id: additional_module_guidelines.htm,v 1.16 2002/07/24 00:21:11 thendrix Exp $</p>
+<p>Version $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $</p>
 <b>Contents</b><br>
 
 
@@ -69,7 +69,7 @@ a table<br>
 names<br>
 </a><img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_14">Express-G
 diagrams</a><br>
-<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_15">USE FROM statements in MIMs</a><br>
+<img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#20020422182450_15">USE FROM statements</a><br>
 <br>
 <img src="item-h0.gif" alt="" width="18" height="9" valign="middle"><a target="_self" href="#req_attr_module">Attributes
 required in module.xml&nbsp;<br>
@@ -215,8 +215,8 @@ e.g.</p>
 <p>&lt;ext_descriptions<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; module_directory=&quot;activity_as_directed&quot;<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; schema_file=&quot;arm.xml&quot;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/24 00:21:11 $"<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.16 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/29 15:22:07 $"<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.17 $"<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; describe.selects=&quot;YES&quot;<br>
 &gt;</p>
 
@@ -686,7 +686,7 @@ was originally defined in the module <b>property_assignment</b>.
 <blockquote>
 <pre>
 &lt;mapping_table&gt;
-  &lt;ae entity="Assigned_property" original_module="property_assignment"&gt;
+  &lt;ae entity=&quot;Assigned_property&quot; original_module=&quot;property_assignment&quot;&gt;
 </pre>
 </blockquote>
 This results in a mapping specification:
@@ -746,9 +746,10 @@ Consequently, the mapping of the attribute <b>described_element</b> must be
 extended to include the assertions to Document_definition and File.
 <p>The XML to do this is:</p>
 <pre>
+  </pre>
   <blockquote>
-    &lt;mapping_table&gt;
-      &lt;ae entity="Assigned_document_property"&gt;
+    <pre>&lt;mapping_table&gt;
+      &lt;ae entity=&quot;Assigned_document_property&quot;&gt;
         &lt;aimelt&gt;property_definition&lt;/aimelt&gt;
         &lt;source&gt;ISO 10303-41&lt;/source&gt;
         &lt;refpath&gt;
@@ -757,13 +758,13 @@ extended to include the assertions to Document_definition and File.
         &lt;/refpath&gt;
         
         &lt;aa 
-          attribute="described_element" 
-          assertion_to="Document_definition"
-          inherited_from_module="property_assignment"
-          inherited_from_entity="Assigned_property"&gt;
+          attribute=&quot;described_element&quot; 
+          assertion_to=&quot;Document_definition&quot;
+          inherited_from_module=&quot;property_assignment&quot;
+          inherited_from_entity=&quot;Assigned_property&quot;&gt;
           .........
+  </pre>
   </blockquote>
-</pre>
 
 
 
@@ -771,7 +772,7 @@ extended to include the assertions to Document_definition and File.
 
 <h2><a name="20020422182450_11">Comments in Express files</a></h2>
 <span class="606025315-27032002"><font face="Arial" size="2">The arm.exp and
-mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.16 2002/07/24 00:21:11 thendrix Exp $ keyword and the SC4 N number as a
+mim.exp files should include the CVS $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ keyword and the SC4 N number as a
 comment on the first few lines of the file.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">The Id will get
 expanded and updated every time you check in the file to CVS. That way you can
@@ -779,7 +780,7 @@ immediately tell when the file was last updated and will get around the issue
 raised by Greg about multiple versions of express files with the same N number.</font></span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">E.g.</font>&nbsp;</span>
 <p><span class="606025315-27032002"><font face="Arial" size="2">(*<br>
-&nbsp; $Id: additional_module_guidelines.htm,v 1.16 2002/07/24 00:21:11 thendrix Exp $<br>
+&nbsp; $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $<br>
 &nbsp; N773 - ISO/CD TS - 10303-1042 Work request - EXPRESS MIM<br>
 *)</font></span>
 <p>&nbsp;
@@ -788,7 +789,7 @@ work_request_mim;</font></span>
 <p>&nbsp;
 <p><span class="606025315-27032002"><font face="Arial" size="2">We should also
 delete the last update comment at the bottom of the file as this is redundant -
-the update information is held by the $Id: additional_module_guidelines.htm,v 1.16 2002/07/24 00:21:11 thendrix Exp $ field.</font></span>
+the update information is held by the $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ field.</font></span>
 <p>&nbsp;
 <h2><a name="20020422182450_12">Inserting Notes and examples in xml files</a></h2>
 <p><span class="198333009-21032002"><font face="Arial">In order to get the following output:</font></span><span class="919371121-26032002">
@@ -892,7 +893,7 @@ To create a table in a module, the syntax is similar to HTML one. For example:
 <p>
   This will produce
 </p>
-  &nbsp;
+&nbsp;
 <p align="center"><b>Table 1 — Table caption</b></p>
 <center>
 <table cellSpacing="0" cellPadding="2" border="1">
@@ -1132,10 +1133,10 @@ schema. These USE FROM statements may contain a list of imported constructs.</p>
     &nbsp;&nbsp; publication.year=&quot;2002&quot;<br>
     &nbsp;&nbsp; published=&quot;y&quot;<br>
     </b>
-    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/24 00:21:11 $&quot;<br>
-    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.16 $&quot;&gt;
+    &nbsp;&nbsp; rcs.date=&quot;$Date: 2002/07/29 15:22:07 $&quot;<br>
+    &nbsp;&nbsp; rcs.revision=&quot;$Revision: 1.17 $&quot;&gt;
   </div>
-  &nbsp;
+&nbsp;
 <p>
   Where:
 <ul>
@@ -1407,17 +1408,17 @@ file will be modified like this:</span></font></p>
 <p><font size="2" face="Arial"><span class="573095806-30052002">&lt;?xml
 version=&quot;1.0&quot;?&gt;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.16 2002/07/24 00:21:11 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ --&gt;<br>
 =======<br>
-&lt;!-- $Id: additional_module_guidelines.htm,v 1.16 2002/07/24 00:21:11 thendrix Exp $ --&gt;<br>
+&lt;!-- $Id: additional_module_guidelines.htm,v 1.17 2002/07/29 15:22:07 robbod Exp $ --&gt;<br>
 &gt;&gt;&gt;&gt;&gt;&gt;&gt; 1.11<br>
 &lt;?xml-stylesheet type=&quot;text/xsl&quot; href=&quot;../../../xsl/express.xsl&quot;?&gt;<br>
 &lt;!DOCTYPE express SYSTEM &quot;../../../dtd/express.dtd&quot;&gt;<br>
 &lt;express<br>
 &nbsp; language_version=&quot;2&quot;<br>
 &lt;&lt;&lt;&lt;&lt;&lt;&lt; arm.xml<br>
-&nbsp; rcs.date=&quot;$Date: 2002/07/24 00:21:11 $&quot;<br>
-&nbsp; rcs.revision=&quot;$Revision: 1.16 $&quot;&gt;</span></font></p>
+&nbsp; rcs.date=&quot;$Date: 2002/07/29 15:22:07 $&quot;<br>
+&nbsp; rcs.revision=&quot;$Revision: 1.17 $&quot;&gt;</span></font></p>
 
 <h2><a name="20020422182450_17">Module renaming</a></h2>
 <span class="746125613-27032002"><font face="Arial" size="2">To
@@ -1449,7 +1450,6 @@ Tell everyone what the new module name is, so that they can change all reference
 from the old module to new module</font></span>
 </span>
 <p>-</p>
-</table>
 
 </body>
 
